--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
   </div>
 </div>
 <div class="row">
-  <div class="column"></div>
-  <div class="column column-50">
+  <!-- <div class="column"></div> -->
+  <div class="column column-100">
     <router-outlet></router-outlet>
   </div>
-  <div class="column"></div>
+  <!-- <div class="column"></div> -->
 </div>
