--- a/src/app/angular-bot/chat/chat.component.scss
+++ b/src/app/angular-bot/chat/chat.component.scss
@@ -23,9 +23,10 @@
 
   .chatbot-position {
     position: absolute;
-    bottom: 20px;
+    // bottom: 20px;
     right: 60px;
     border: 1px solid #606c76;
     border-radius: 5px;
     padding: 20px;
+    margin-top: 470px !important;
   }
