--- a/src/app/angular-bot/main-page/main-page.component.html
+++ b/src/app/angular-bot/main-page/main-page.component.html
@@ -174,7 +174,7 @@ Free to sign up. Free to use.
 								</div>
 					</div>
 		</div> -->
-				<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-4d483d1a" data-id="4d483d1a" data-element_type="column">
+				<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-4d483d1a" data-id="4d483d1a" data-element_type="column">
 			<div class="elementor-column-wrap elementor-element-populated">
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-8a34f61 elementor-widget elementor-widget-heading" data-id="8a34f61" data-element_type="widget" data-widget_type="heading.default">
@@ -207,12 +207,6 @@ Free to sign up. Free to use.
 						</div>
 					</div>
 		</div>
-				<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-5ba90e5" data-id="5ba90e5" data-element_type="column">
-			<div class="elementor-column-wrap">
-							<div class="elementor-widget-wrap">
-								</div>
-					</div>
-		</div>
 								</div>
 					</div>
 		</section>
@@ -241,7 +235,7 @@ Free to sign up. Free to use.
 								</div>
 					</div>
 		</div> -->
-				<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-2481dac" data-id="2481dac" data-element_type="column">
+				<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-2481dac" data-id="2481dac" data-element_type="column">
 			<div class="elementor-column-wrap elementor-element-populated">
 							<div class="elementor-widget-wrap">
 						<section class="elementor-section elementor-inner-section elementor-element elementor-element-204361c elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="204361c" data-element_type="section">
@@ -403,13 +397,8 @@ Free to sign up. Free to use.
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-17c6033 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="17c6033" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
 							<div class="elementor-row">
-					<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-4dd9d78" data-id="4dd9d78" data-element_type="column">
-			<div class="elementor-column-wrap">
-							<div class="elementor-widget-wrap">
-								</div>
-					</div>
-		</div>
-				<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-e272117" data-id="e272117" data-element_type="column">
+					
+				<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-e272117" data-id="e272117" data-element_type="column">
 			<div class="elementor-column-wrap elementor-element-populated">
 							<div class="elementor-widget-wrap">
 						<section class="elementor-section elementor-inner-section elementor-element elementor-element-a836f98 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="a836f98" data-element_type="section">
@@ -417,7 +406,7 @@ Free to sign up. Free to use.
 							<div class="elementor-row">
 					<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-a3251b0" data-id="a3251b0" data-element_type="column">
 			<div class="elementor-column-wrap elementor-element-populated">
-							<div class="elementor-widget-wrap">
+							<div class="elementor-widget-wrap" style="margin: 0px !important;">
 						<div class="elementor-element elementor-element-c45ddf2 fxo-content-box-4 elementor-widget elementor-widget-text-editor" data-id="c45ddf2" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
@@ -500,12 +489,6 @@ No you don’t, you only need to tell us your name and email address to get an a
 					</div>
 		</section>
 						</div>
-					</div>
-		</div>
-				<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-8dcca64" data-id="8dcca64" data-element_type="column">
-			<div class="elementor-column-wrap">
-							<div class="elementor-widget-wrap">
-								</div>
 					</div>
 		</div>
 								</div>
