--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="row top-bar">
+<!-- <div class="row top-bar">
   <div class="column column-25"></div>
   <div class="column column-50">
     <button class="button button-outline"
@@ -9,7 +9,7 @@
     {{link.label}}
     </button>
   </div>
-</div>
+</div> -->
 <div class="row">
   <!-- <div class="column"></div> -->
   <div class="column column-100">
